Updated server launcher