@@ -1,2 +1,2 @@
-"C:\Program Files\Java\jdk-14\bin\java.exe" --module-path "../server/bin;../shared/bin;" --add-modules ritzow.sandbox.server --enable-preview -m ritzow.sandbox.server/ritzow.sandbox.server.StartServer ::1
+"C:\Program Files\Java\jdk-14\bin\java.exe" --module-path "../server/bin;../shared/bin;" --enable-preview -m ritzow.sandbox.server/ritzow.sandbox.server.StartServer ::1
 PAUSE
